changed color scheme

--- a/assets/css/themes/creative.css
+++ b/assets/css/themes/creative.css
@@ -1,8 +1,8 @@
 :root {
-  --color-primary: #fe688b;
-  --color-secondary: #f9b851;
-  --color-gradient-start: #fe688b;
-  --color-gradient-stop: #000b96;
+  --color-primary: #412F95;
+  --color-secondary: #6348FF;
+  --color-gradient-start: #412F95;
+  --color-gradient-stop: #6348FF;
 }
 
 body {
